infra/k8s/real-time-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: realtime-service
  namespace: stock-tracker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: realtime-service
  template:
    metadata:
      labels:
        app: realtime-service
    spec:
      containers:
        - name: realtime-service
          image: goodmanisltd/td-realtime-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8001
          livenessProbe:
            httpGet:
              path: /health
              port: 8001
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8001
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: realtime-service
  namespace: stock-tracker
spec:
  selector:
    app: realtime-service
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
